# jogo-dama-heskel

./: README.md  damas.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/3ac3960c/: cabal_macros.h
app/: Main.hs
src/: Board.hs  BoardUtils.hs  GameLogic.hs  Main.hs  Moves.hs  Rules.hs  Types.hs  UI.hs
