name:                damas
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable damas
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Types, Board, GameLogic, Moves, UI
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010